# LLM_Prompt_Engine

./: Dockerfile  Makefile  README.md  evaluation_results.csv  folderstructure  pyproject.toml
.github/workflows/: ci.yml
backend/: app.py  requirements.txt
backend/app/: config.py  main.py  routes.py
backend/app/services/: prompt_generation.py
backend/tests/: __init__.py  prompts.json  test_evaluation_data_generation.py  test_prompt_testing.py
backend/utils/: langchain.py  pdf_utils.py  vector_store_utils.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: chatbox.js
